[tool.poetry]
name = "rssi-prediction"
version = "0.1.0"
description = "Predict RSSI values at different locations for rooms of different shapes using machine learning"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "rssi_prediction"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
